--- a/gifts/package.json
+++ b/gifts/package.json
@@ -16,6 +16,8 @@
     "@mantine/nprogress": "^7.14.2",
     "@mantine/spotlight": "^7.14.2",
     "@mantine/tiptap": "^7.14.2",
+    "@tabler/icons": "^3.22.0",
+    "@tabler/icons-react": "^3.22.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
