ci: Fixed typo.

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -19,8 +19,8 @@ jobs:
           node-version: '16'
 
       - name: Install Dependencies
-        run: npm |
-          install -g yarn
+        run: |
+          npm install -g yarn
           yarn isntall
 
       - name: Build
