ci: Fixed another typo.

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           npm install -g yarn
           cd ./gifts
-          yarn isntall
+          yarn install
 
       - name: Build
         run: yarn run build
