--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -25,10 +25,12 @@ jobs:
           yarn install
 
       - name: Build
-        run: yarn run build
+        run: |
+          yarn run build
+          cd ./gifts
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
+          publish_dir: ./gifts/build
