--- a/gifts/package.json
+++ b/gifts/package.json
@@ -65,7 +65,8 @@
   },
   "devDependencies": {
     "commitizen": "^4.3.1",
-    "cz-conventional-changelog": "3.3.0"
+    "cz-conventional-changelog": "3.3.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
   },
   "config": {
     "commitizen": {
