--- a/gifts/package.json
+++ b/gifts/package.json
@@ -2,6 +2,7 @@
   "name": "gifts",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@mantine/carousel": "^7.14.2",
     "@mantine/charts": "^7.14.2",
