--- a/gifts/package.json
+++ b/gifts/package.json
@@ -65,9 +65,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "3.3.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
+    "prettier": "3.4.2"
   },
   "config": {
     "commitizen": {
